stop questions from being selected when not visible

--- a/src/sass/modules/_question.scss
+++ b/src/sass/modules/_question.scss
@@ -11,6 +11,7 @@
   .is-board &,
   .is-win & {
     opacity: 0;
+    pointer-events: none;
   }
 }
 
